# sm-sign

./: CMakeLists.txt  README.md  TODO  cert.x509  k-aapt-sm2.apk  key.pk8  priv.pem  pub.pem  test.pk7
inc/: key.h  keygen.h  sm.h  sm2.h  sm3.h
lib/openssl/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
sm_sign/: README.md  setup.py
sm_sign/sm_sign/: sign.py
src/: cert.x509  keygen.i  main.cc  pri_key.ec  pubkey.ec  sign.py  sm.ipynb  sm2.cc  sm3.cc  x509.cc
test/valid/: .fuse_hidden0000042200000043  com.android.vending-16.apk.sm2
test/valid/com.android.vending-16/resources/: AndroidManifest.xml  classes.dex
test/valid/com.android.vending-16/resources/res/values/: public.xml  strings.xml
test/valid/com.android.vending-16/sources/com/android/vending/: BuildConfig.java  GrantFakeSignaturePermissionActivity.java  R.java
test/valid/com.android.vending-16/sources/com/android/vending/billing/: IInAppBillingService.java  InAppBillingService.java
tools/: digest.cc  keygen.cc  test.cc
utils/: key.cc  sm.cc  sm.i
